--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+
+# git rm --cached example_file_name.py → remove FILE from git BUT don't delete
+# git rm --cached -r example-directory_name → remove DIRECOTRY from git BUT don't delete
+
+
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
